# ChangeLog for games-fps/quake2-icculus
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/quake2-icculus/ChangeLog,v 1.33 2009/06/30 21:00:04 fauli Exp $

  30 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  quake2-icculus-0.16.1-r1.ebuild:
  stable x86, bug 275507

  28 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  quake2-icculus-0.16.1.ebuild, quake2-icculus-0.16.1-r1.ebuild:
  Removing keywords. See bug 275507.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org>
  quake2-icculus-0.16.1.ebuild, quake2-icculus-0.16.1-r1.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  19 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  +files/quake2-icculus-0.16.1-no-asm-io.patch,
  quake2-icculus-0.16.1-r1.ebuild:
  Fix building with sanitized kernel headers #193107.

  15 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  quake2-icculus-0.16.1.ebuild, quake2-icculus-0.16.1-r1.ebuild:
  Fix quoting.

  28 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>
  quake2-icculus-0.16.1-r1.ebuild:
  make the doc message more generic (bug #207773)

  13 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  quake2-icculus-0.16.1.ebuild, quake2-icculus-0.16.1-r1.ebuild:
  Change which to type -P for QA.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  09 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  quake2-icculus-0.16.1-r1.ebuild:
  Fix up the einfos into elogs and make sure we don't do anything w/ q2ded
  unless USE=dedicated.

  05 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake2-icculus-0.16.1.ebuild, quake2-icculus-0.16.1-r1.ebuild:
  Removing old virtual/x11 dependency.

  27 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/0.16-rogue-armor.patch, quake2-icculus-0.16.1.ebuild,
  quake2-icculus-0.16.1-r1.ebuild:
  Added patch to fix compiling of rogue.  Closing bug #137855.

*quake2-icculus-0.16.1-r1 (27 Jun 2006)